Fixed the overflow on the Home Page

--- a/src/Components/About.module.css
+++ b/src/Components/About.module.css
@@ -1,3 +1,13 @@
+.tgl1{
+    position: relative;
+    right: 217px;
+}
+
+.tgl2{
+    position: relative;
+    right: 260px;
+}
+
 
 .aboutCont{
     display: flex;
@@ -42,6 +52,11 @@ h2{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     color: hsl(0, 0%, 30%);
+}
+
+.abtM{
+    display: flex;
+    justify-content: flex-start;
 }
 
 .contLeft{
@@ -114,8 +129,7 @@ h2{
 }
 
 .btn:hover{
-    color: #0077B5;
-    transform: scale(1.1);
+    color: hsl(246, 100%, 30%);
     background-color: transparent;
 }
 
